# PDFColorSpliter

./: AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
doc/: development.md
src/pdfcolorspliter/: __init__.py  assets.py  booklet.py  build.py  cli.py  detector.py  exporter.py  main.py  models.py  pdf_ops.py  planner.py  webview_app.py
src/pdfcolorspliter/web/: app.js  index.html  styles.css
